--- a/nginx/appseed-app.conf
+++ b/nginx/appseed-app.conf
@@ -1,9 +1,9 @@
 upstream webapp {
-    server appseed_app:5005;
+    server appseed_app:8000;
 }
 
 server {
-    listen 85;
+    listen 80;
     server_name localhost;
 
     location / {
@@ -12,4 +12,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /static/ {
+        alias /app/staticfiles/;
+    }
+
+    location /media/ {
+        alias /app/media/;
+    }
 }
