--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,8 @@
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
+        "runtime": "python3.9",
+        "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput"
       }
     }
   ],
